--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   </style>
 </head>
 <body>
-  <section class="heading">
+  <header class="heading">
     <p>Reliable, efficient delivery</p>
     <h1>Powered by Technology</h1>
       <p>Our Artificial Intelligence powered tools use millions of project data points 
         to ensure that your project is successful</p>
-  </section>
+  </header>
   <main>
 
     <section class="supervisor card">
